# battleships-bot

./: Cargo.toml
battleships_app/: Cargo.toml
battleships_app/src/: main.rs
battleships_impl/: Cargo.toml
battleships_impl/src/: action.rs  consts.rs  hooks.rs  lib.rs  render.rs
battleships_impl/src/render/: fire.rs  mod.rs  next_turns.rs  place.rs  start.rs  wrong.rs
battleships_impl/src/render/utility/: mod.rs  render_target.rs  renders.rs
battleships_model/: Cargo.toml
battleships_model/src/: encode.rs  game_state.rs  lib.rs
