[package]
name = "battleships_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serenity = { version = "0.11.5", default-features = false, features = [ "builder", "client", "gateway", "http", "model", "utils", "rustls_backend" ] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
battleships_impl = { path = "../battleships_impl"}
battleships_model = { path = "../battleships_model"}
