[package]
name = "battleships_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.21.0"
bitflags = "2.0.2"
serenity = { version = "0.11.5", default-features = false, features = [ "builder", "client", "gateway", "http", "model", "utils", "rustls_backend" ] }
battleships_model = { path = "../battleships_model"}
